# course_django_project

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  ProcFile  Procfile  Procfile.windows  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
currency/: admin.py  models.py  tasks.py  urls.py  views.py
currency/migrations/: 0001_initial.py  0002_auto_20210912_0045.py  0003_alter_currency_currency.py  0004_auto_20210914_0022.py  0005_alter_currency_options.py
currency/tests/: currency_tests.py
django_kornilov/: Procfile  asgi.py  celery.py  settings.py  urls.py  wsgi.py
generate_students/: forms.py  urls.py  views.py
generate_students/templates/: generate_students.html
group/: admin.py  forms.py  models.py  urls.py  views.py
group/migrations/: 0001_initial.py  0002_auto_20210908_0040.py  0002_group_group_monitor.py  0003_alter_group_group_name.py  0003_alter_group_options.py  0003_auto_20210910_1752.py  0004_auto_20210908_0046.py
group/templates/: create_group.html
group/tests/: forms_tests.py  group_tests.py
mail_processing/: apps.py  forms.py  tasks.py  urls.py  views.py
mail_processing/tests/: forms_tests.py  mail_processing_tests.py
static/: staticfiles.json
students/: admin.py  apps.py  forms.py  handlers.py  middleware.py  models.py  tasks.py  urls.py  views.py
students/group/: urls.py
students/students/: urls.py  (+1 more)
teachers/: admin.py  apps.py  forms.py  handlers.py  models.py  urls.py  views.py
templates/: base.html
user_signup/: forms.py  models.py  urls.py  views.py
(+70 files in other folders)
