[tool.poetry]
name = "django_kornilov"
version = "0.1.0"
description = ""
authors = ["Yevhen Kornilov"]

[tool.poetry.dependencies]
python = "3.9.7"
Django = "3.2.5"
celery = "5.1.2"
dj-database-url = "0.5.0"
django-extensions = "3.1.3"
psycopg2 = "2.9.1"
Faker = "8.10.3"
whitenoise = "5.3.0"
factory-boy = "3.2.0"
pytest-cov = "3.0.0"
requests = "2.26.0"


[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
flake8-builtins = "1.5.3"
flake8-import-order = "0.18.1"
flake8-print = "4.0.0"
django-debug-toolbar = "3.2.1"
python-dotenv = "0.19.0"
pytest = "6.2.5"
pytest-django = "4.4.0"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
